name:                halyard
version:             0.1.0.0
synopsis:            An offline stand-alone RegEx tester
-- description:
-- bug-reports:
license:             GPL-3
license-file:        LICENSE
author:              patrickp89
maintainer:          patrickpreuss@netherspace.de
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable halyard
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       haskell-gi-base >= 0.21.4 && < 1,
                       gi-gtk >= 3.0.26 && < 4
  hs-source-dirs:      src
  default-language:    Haskell2010

