name:                halyard
version:             0.1.0.0
synopsis:            An offline stand-alone RegEx tester
description:         A tool to test your regular expressions against sample input,
                     running offline and therefore being a nice substitute for any
                     obscure online tools - especially for sensitive data.
category:            Development

license:             GPL-3
license-file:        LICENSE
author:              patrickp89
maintainer:          patrickpreuss@netherspace.de

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

bug-reports:         https://github.com/patrickp89/halyard/issues

source-repository head
  type:              git
  location:          https://github.com/patrickp89/halyard

executable halyard
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14,
                       haskell-gi-base >= 0.22.1 && < 1,
                       gi-gtk >= 3.0.32 && < 4,
                       regex-tdfa >= 1.3.0 && < 1.4,
                       text >= 1.2.4.0 && < 1.3,
                       flow >= 1.0.21 && < 2
  hs-source-dirs:      src
  other-modules:       RegExUtil
  default-language:    Haskell2010
